# essentia

./: .gitignore  CMakeLists.txt  essentia_exec.cpp
src/: CMakeLists.txt  version.h
src/algorithms/: essentia_algorithms_reg.cpp
src/algorithms/audioproblems/: falsestereodetector.cpp  humdetector.cpp  humdetector.h
src/algorithms/extractor/: barkextractor.cpp  extractor.cpp  extractor.h  keyextractor.cpp  keyextractor.h  levelextractor.cpp  levelextractor.h  lowlevelspectraleqloudextractor.cpp  lowlevelspectraleqloudextractor.h  lowlevelspectralextractor.cpp  lowlevelspectralextractor.h  rhythmdescriptors.cpp  rhythmdescriptors.h  tonalextractor.cpp  tonalextractor.h  tuningfrequencyextractor.cpp  tuningfrequencyextractor.h
src/algorithms/highlevel/: danceability.cpp  dynamiccomplexity.cpp
src/algorithms/io/: audioloader.h  audiowriter.h  easyloader.h  eqloudloader.h  fileoutputproxy.cpp  monoloader.h  monowriter.h
src/algorithms/machinelearning/: tensorflowpredictmusicnn.h  tensorflowpredicttempocnn.h  tensorflowpredictvggish.h
src/algorithms/rhythm/: beatsloudness.cpp  beatsloudness.h  beattrackerdegara.cpp  beattrackerdegara.h  beattrackermultifeature.cpp  beattrackermultifeature.h  bpmhistogram.cpp  bpmhistogram.h  noveltycurve.cpp  onsetdetectionglobal.cpp  onsetrate.cpp  percivalbpmestimator.cpp  percivalbpmestimator.h  rhythmextractor.cpp  rhythmextractor.h  rhythmextractor2013.cpp  rhythmextractor2013.h  rhythmtransform.cpp  superfluxextractor.cpp  superfluxextractor.h  tempotapdegara.cpp
src/algorithms/standard/: cubicspline.h  fftk.h  fftkcomplex.h  ifftk.h  ifftkcomplex.h  realaccumulator.h  replaygain.cpp  slicer.h  spline.h  stereodemuxer.h  tensortovectorreal.h  vectorrealaccumulator.h  vectorrealtotensor.h  welch.cpp
src/algorithms/temporal/: loudnessebur128.cpp  loudnessebur128.h
src/algorithms/tonal/: chordsdetection.cpp  highresolutionfeatures.cpp  key.cpp  multipitchmelodia.cpp  nnlschroma.h  pitchmelodia.cpp  pitchyinprobabilistic.cpp  pitchyinprobabilistic.h  predominantpitchmelodia.cpp
src/essentia/: essentiamath.h
